--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,30 +4,52 @@
   position:absolute;
   left:0;
   top:0;
-  width:100%;	
+  width:100%;
+  height: 100vh;	
 }
 #pantalla{
-  float:left;
-  width:100%;
-  height:25%;
-  background:#B3FBBD;
-  text-align:center;
-  color:#FFF;
-  font-size:4em;
-  font-weight:bold;
-  font-family:"Times New Roman", Times, serif;	
+  float: left;
+  width: 100%;
+  height :25%;
+  background:linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0.9));
+  text-align: center;
+  font-size: 4em;
+  font-weight: bold;
+  font-family: "Times New Roman" ,Times , serif;
+  color: #FFF;
 }
 #teclado{
-  float:left;
-  width:100%;
-  height:75%;	
+  float: left;
+  width: 100%;
+  height: 75%;	
 }
 .nota{
 	position::relative;
 	float:left;
-	height:90%;
-	outline:#3F3 solid 1px;
-	background:#F5FD9F;
-    width:14.28571428571429%;
+	height:100%;
+	outline:#000 solid 3px;
+	background: #FFF;
+    width:7.142856%;
+}
+.nota1 {
+	position: relative;
+	float:right;
+	margin-right: -25%;
+	height: 40vh;
+	background-color:#000;
+	width:50%;
+	margin-top:-14px;
+}
+.tocada{
+	background: #6F6;
+	color: #FFF;
+	outline: #699 solid 1px;
 }
 
+.textonota{
+	position: relative;
+	top: 80%;
+	text-align: center;
+	font-size: 70%;
+	font-weight: bold;
+}
