--- a/css/estilo.css
+++ b/css/estilo.css
@@ -40,6 +40,11 @@
 	width:50%;
 	margin-top:-14px;
 }
+.tocadaS{
+	background: #999;
+	color: #FFF;
+	outline: #699 solid 1px;
+}
 .tocada{
 	background: #6F6;
 	color: #FFF;
@@ -52,4 +57,10 @@
 	text-align: center;
 	font-size: 70%;
 	font-weight: bold;
+}
+h5 {
+	text-align:center;
+	margin-top:340px;
+	color:#FFF;
+	
 }
