--- a/css/estilo.css
+++ b/css/estilo.css
@@ -18,11 +18,18 @@
   font-family: "Times New Roman" ,Times , serif;
   color: #FFF;
 }
-#teclado{
+#teclado {
+	margin-top:-50px;
   float: left;
   width: 100%;
   height: 75%;	
 }
+#sound {
+  float: left;
+  width: 100%;
+  height: 75%;	
+}
+
 .nota{
 	position::relative;
 	float:left;
@@ -32,13 +39,20 @@
     width:7.142856%;
 }
 .nota1 {
+	position::relative;
+	float:left;
+	height:100%;
+	outline:#000 solid 3px;
+	background: #000;
+    width:4.16666666666666666666667%;
+	/*
 	position: relative;
 	float:right;
 	margin-right: -25%;
 	height: 40vh;
 	background-color:#000;
 	width:50%;
-	margin-top:-14px;
+	margin-top:-14px;*/
 }
 .tocadas{
 	background: #999;
@@ -63,4 +77,7 @@ h5 {
 	margin-top:340px;
 	color:#FFF;
 	
+}
+#blanco {
+	background-color:#FFF;
 }
